fixed the overflow on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   padding: 1rem;
   box-sizing: border-box;
   text-align: center;
+  overflow: hidden;
 }
 
 .App-header {
